plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pnn'
version = '0.0.1-SNAPSHOT'
description = 'PNN Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // RestClient/WebClient를 위한 reactive-streams 지원
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8' // Swagger UI (Spring Boot 3.5 호환)

	// QueryDSL 의존성 (Spring Boot 3.x, Jakarta EE 지원)
	// 1. QueryDSL 핵심 라이브러리
	implementation "com.querydsl:querydsl-jpa:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	
	// 2. Q클래스를 생성해주는 어노테이션 프로세서 (요즘은 얘가 알아서 경로를 다 잡아줍니다)
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	
	// 3. java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// 4. Reactive Streams 의존성 (Spring Boot 3.x 지원)
	implementation "org.reactivestreams:reactive-streams:1.0.4"

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// ---------------------------------------------------------
// QueryDSL Q-Class 생성 경로 및 소스 디렉토리 설정
// ---------------------------------------------------------
// 1. Q-Class가 생성될 디렉토리 정의 (build 폴더 하위)
def querydslDir = "$buildDir/generated/querydsl"

// 2. 생성된 Q-Class 디렉토리를 컴파일 대상 소스(sourceSets)에 추가
sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

// 3. 자바 컴파일(JavaCompile) 태스크 실행 시, 어노테이션 프로세서가 생성하는 소스 파일의 위치를 지정
tasks.withType(JavaCompile) {
	options.generatedSourceOutputDirectory = file(querydslDir)
}

// 4. clean 태스크 실행 시, Q-Class가 생성된 디렉토리도 함께 삭제하도록 설정
clean.doLast {
	file(querydslDir).deleteDir()
}

tasks.named('test') {
	useJUnitPlatform()
}
